--- a/app/src/main/res/layout/list_item_payment.xml
+++ b/app/src/main/res/layout/list_item_payment.xml
@@ -5,20 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/layout_stroke_list_item"
-    android:padding="8dp"
+    android:padding="10dp"
     android:layout_margin="8dp">
 
     <TextView
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
         android:ellipsize="end"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         tools:text="Payment 1" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp">
+
+        <TextView
+            android:text="@string/payment_amount_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/amount_text_view"
             android:layout_width="wrap_content"
@@ -26,19 +36,35 @@
             android:paddingStart="4dp"
             android:paddingEnd="8dp"
             tools:text="1.03"/>
+
         <TextView
             android:id="@+id/currency_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="BTC"/>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/payment_date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        tools:text="12feb2020"/>
+        android:paddingEnd="4dp">
+
+        <TextView
+            android:text="@string/payment_date_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/payment_date_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            tools:text="12feb2020"/>
+
+    </LinearLayout>
 
 </LinearLayout>
