--- a/app/src/main/res/drawable/layout_stroke_list_item.xml
+++ b/app/src/main/res/drawable/layout_stroke_list_item.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:width="2dp"
-        android:color="@color/design_default_color_on_secondary"/>
+    <stroke android:width="1dp"
+        android:color="@color/black"/>
 
     <corners android:radius="6dp"/>
 
