--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"
+            android:textAlignment="center"
             tools:visibility="gone"/>
 
         <TextView
