--- a/app/src/main/res/layout/fragment_payment_list.xml
+++ b/app/src/main/res/layout/fragment_payment_list.xml
@@ -24,6 +24,7 @@
 
         <TextView
             android:id="@+id/error_text_view"
+            android:text="@string/network_error_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="ERROR OCCURRED."
@@ -43,6 +44,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/payments_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
