--- a/app/src/main/res/layout/list_item_payment.xml
+++ b/app/src/main/res/layout/list_item_payment.xml
@@ -12,6 +12,7 @@
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="2"
         android:ellipsize="end"
         android:textColor="@color/black"
         android:textSize="16sp"
